// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-popover> Component UUID of the popover 1`] = `
<bolt-popover uuid="custom-unique-id">
  <replace-with-children class="c-bolt-popover c-bolt-popover--bottom c-bolt-popover--text-wrap c-bolt-popover--spacing-small">
    <replace-with-grandchildren id="js-bolt-tooltip-triggercustom-unique-id">
      <a href="#js-bolt-tooltip-custom-unique-id"
         class="c-bolt-popover__nojs-trigger"
         tabindex="-1"
      >
        <bolt-button>
          This triggers a popover
        </bolt-button>
      </a>
    </replace-with-grandchildren>
    <span slot="content">
      <replace-with-grandchildren class="c-bolt-popover__content"
                                  id="js-bolt-tooltip-custom-unique-id"
      >
        <span class="c-bolt-popover__bubble">
          <a href="#js-bolt-tooltip-triggercustom-unique-id"
             class="c-bolt-popover__nojs-close"
          >
            <span aria-hidden="true">
              &times;
            </span>
            <span class="u-bolt-visuallyhidden">
              Close popover
            </span>
          </a>
          This is the content of the popover with a
          <bolt-link url="https://pega.com">
            call to action
          </bolt-link>
          .
        </span>
      </replace-with-grandchildren>
    </span>
  </replace-with-children>
</bolt-popover>
`;

exports[`<bolt-popover> Component basic usage 1`] = `
<bolt-popover uuid="12345">
  <replace-with-children class="c-bolt-popover c-bolt-popover--bottom c-bolt-popover--text-wrap c-bolt-popover--spacing-small">
    <replace-with-grandchildren id="js-bolt-tooltip-trigger12345">
      <a href="#js-bolt-tooltip-12345"
         class="c-bolt-popover__nojs-trigger"
         tabindex="-1"
      >
        <bolt-button>
          This triggers a popover
        </bolt-button>
      </a>
    </replace-with-grandchildren>
    <span slot="content">
      <replace-with-grandchildren class="c-bolt-popover__content"
                                  id="js-bolt-tooltip-12345"
      >
        <span class="c-bolt-popover__bubble">
          <a href="#js-bolt-tooltip-trigger12345"
             class="c-bolt-popover__nojs-close"
          >
            <span aria-hidden="true">
              &times;
            </span>
            <span class="u-bolt-visuallyhidden">
              Close popover
            </span>
          </a>
          This is the content of the popover with a
          <bolt-link url="https://pega.com">
            call to action
          </bolt-link>
          .
        </span>
      </replace-with-grandchildren>
    </span>
  </replace-with-children>
</bolt-popover>
`;

exports[`<bolt-popover> Component content placement: auto 1`] = `
<bolt-popover placement="auto"
              uuid="12345"
>
  <replace-with-children class="c-bolt-popover c-bolt-popover--bottom c-bolt-popover--text-wrap c-bolt-popover--spacing-small">
    <replace-with-grandchildren id="js-bolt-tooltip-trigger12345">
      <a href="#js-bolt-tooltip-12345"
         class="c-bolt-popover__nojs-trigger"
         tabindex="-1"
      >
        <bolt-button>
          This triggers a popover
        </bolt-button>
      </a>
    </replace-with-grandchildren>
    <span slot="content">
      <replace-with-grandchildren class="c-bolt-popover__content"
                                  id="js-bolt-tooltip-12345"
      >
        <span class="c-bolt-popover__bubble">
          <a href="#js-bolt-tooltip-trigger12345"
             class="c-bolt-popover__nojs-close"
          >
            <span aria-hidden="true">
              &times;
            </span>
            <span class="u-bolt-visuallyhidden">
              Close popover
            </span>
          </a>
          This is the content of the popover with a
          <bolt-link url="https://pega.com">
            call to action
          </bolt-link>
          .
        </span>
      </replace-with-grandchildren>
    </span>
  </replace-with-children>
</bolt-popover>
`;

exports[`<bolt-popover> Component content placement: bottom 1`] = `
<bolt-popover placement="bottom"
              uuid="12345"
>
  <replace-with-children class="c-bolt-popover c-bolt-popover--bottom c-bolt-popover--text-wrap c-bolt-popover--spacing-small">
    <replace-with-grandchildren id="js-bolt-tooltip-trigger12345">
      <a href="#js-bolt-tooltip-12345"
         class="c-bolt-popover__nojs-trigger"
         tabindex="-1"
      >
        <bolt-button>
          This triggers a popover
        </bolt-button>
      </a>
    </replace-with-grandchildren>
    <span slot="content">
      <replace-with-grandchildren class="c-bolt-popover__content"
                                  id="js-bolt-tooltip-12345"
      >
        <span class="c-bolt-popover__bubble">
          <a href="#js-bolt-tooltip-trigger12345"
             class="c-bolt-popover__nojs-close"
          >
            <span aria-hidden="true">
              &times;
            </span>
            <span class="u-bolt-visuallyhidden">
              Close popover
            </span>
          </a>
          This is the content of the popover with a
          <bolt-link url="https://pega.com">
            call to action
          </bolt-link>
          .
        </span>
      </replace-with-grandchildren>
    </span>
  </replace-with-children>
</bolt-popover>
`;

exports[`<bolt-popover> Component content placement: bottom-end 1`] = `
<bolt-popover placement="bottom-end"
              uuid="12345"
>
  <replace-with-children class="c-bolt-popover c-bolt-popover--bottom c-bolt-popover--text-wrap c-bolt-popover--spacing-small">
    <replace-with-grandchildren id="js-bolt-tooltip-trigger12345">
      <a href="#js-bolt-tooltip-12345"
         class="c-bolt-popover__nojs-trigger"
         tabindex="-1"
      >
        <bolt-button>
          This triggers a popover
        </bolt-button>
      </a>
    </replace-with-grandchildren>
    <span slot="content">
      <replace-with-grandchildren class="c-bolt-popover__content"
                                  id="js-bolt-tooltip-12345"
      >
        <span class="c-bolt-popover__bubble">
          <a href="#js-bolt-tooltip-trigger12345"
             class="c-bolt-popover__nojs-close"
          >
            <span aria-hidden="true">
              &times;
            </span>
            <span class="u-bolt-visuallyhidden">
              Close popover
            </span>
          </a>
          This is the content of the popover with a
          <bolt-link url="https://pega.com">
            call to action
          </bolt-link>
          .
        </span>
      </replace-with-grandchildren>
    </span>
  </replace-with-children>
</bolt-popover>
`;

exports[`<bolt-popover> Component content placement: bottom-start 1`] = `
<bolt-popover placement="bottom-start"
              uuid="12345"
>
  <replace-with-children class="c-bolt-popover c-bolt-popover--bottom c-bolt-popover--text-wrap c-bolt-popover--spacing-small">
    <replace-with-grandchildren id="js-bolt-tooltip-trigger12345">
      <a href="#js-bolt-tooltip-12345"
         class="c-bolt-popover__nojs-trigger"
         tabindex="-1"
      >
        <bolt-button>
          This triggers a popover
        </bolt-button>
      </a>
    </replace-with-grandchildren>
    <span slot="content">
      <replace-with-grandchildren class="c-bolt-popover__content"
                                  id="js-bolt-tooltip-12345"
      >
        <span class="c-bolt-popover__bubble">
          <a href="#js-bolt-tooltip-trigger12345"
             class="c-bolt-popover__nojs-close"
          >
            <span aria-hidden="true">
              &times;
            </span>
            <span class="u-bolt-visuallyhidden">
              Close popover
            </span>
          </a>
          This is the content of the popover with a
          <bolt-link url="https://pega.com">
            call to action
          </bolt-link>
          .
        </span>
      </replace-with-grandchildren>
    </span>
  </replace-with-children>
</bolt-popover>
`;

exports[`<bolt-popover> Component content placement: left 1`] = `
<bolt-popover placement="left"
              uuid="12345"
>
  <replace-with-children class="c-bolt-popover c-bolt-popover--bottom c-bolt-popover--text-wrap c-bolt-popover--spacing-small">
    <replace-with-grandchildren id="js-bolt-tooltip-trigger12345">
      <a href="#js-bolt-tooltip-12345"
         class="c-bolt-popover__nojs-trigger"
         tabindex="-1"
      >
        <bolt-button>
          This triggers a popover
        </bolt-button>
      </a>
    </replace-with-grandchildren>
    <span slot="content">
      <replace-with-grandchildren class="c-bolt-popover__content"
                                  id="js-bolt-tooltip-12345"
      >
        <span class="c-bolt-popover__bubble">
          <a href="#js-bolt-tooltip-trigger12345"
             class="c-bolt-popover__nojs-close"
          >
            <span aria-hidden="true">
              &times;
            </span>
            <span class="u-bolt-visuallyhidden">
              Close popover
            </span>
          </a>
          This is the content of the popover with a
          <bolt-link url="https://pega.com">
            call to action
          </bolt-link>
          .
        </span>
      </replace-with-grandchildren>
    </span>
  </replace-with-children>
</bolt-popover>
`;

exports[`<bolt-popover> Component content placement: left-end 1`] = `
<bolt-popover placement="left-end"
              uuid="12345"
>
  <replace-with-children class="c-bolt-popover c-bolt-popover--bottom c-bolt-popover--text-wrap c-bolt-popover--spacing-small">
    <replace-with-grandchildren id="js-bolt-tooltip-trigger12345">
      <a href="#js-bolt-tooltip-12345"
         class="c-bolt-popover__nojs-trigger"
         tabindex="-1"
      >
        <bolt-button>
          This triggers a popover
        </bolt-button>
      </a>
    </replace-with-grandchildren>
    <span slot="content">
      <replace-with-grandchildren class="c-bolt-popover__content"
                                  id="js-bolt-tooltip-12345"
      >
        <span class="c-bolt-popover__bubble">
          <a href="#js-bolt-tooltip-trigger12345"
             class="c-bolt-popover__nojs-close"
          >
            <span aria-hidden="true">
              &times;
            </span>
            <span class="u-bolt-visuallyhidden">
              Close popover
            </span>
          </a>
          This is the content of the popover with a
          <bolt-link url="https://pega.com">
            call to action
          </bolt-link>
          .
        </span>
      </replace-with-grandchildren>
    </span>
  </replace-with-children>
</bolt-popover>
`;

exports[`<bolt-popover> Component content placement: left-start 1`] = `
<bolt-popover placement="left-start"
              uuid="12345"
>
  <replace-with-children class="c-bolt-popover c-bolt-popover--bottom c-bolt-popover--text-wrap c-bolt-popover--spacing-small">
    <replace-with-grandchildren id="js-bolt-tooltip-trigger12345">
      <a href="#js-bolt-tooltip-12345"
         class="c-bolt-popover__nojs-trigger"
         tabindex="-1"
      >
        <bolt-button>
          This triggers a popover
        </bolt-button>
      </a>
    </replace-with-grandchildren>
    <span slot="content">
      <replace-with-grandchildren class="c-bolt-popover__content"
                                  id="js-bolt-tooltip-12345"
      >
        <span class="c-bolt-popover__bubble">
          <a href="#js-bolt-tooltip-trigger12345"
             class="c-bolt-popover__nojs-close"
          >
            <span aria-hidden="true">
              &times;
            </span>
            <span class="u-bolt-visuallyhidden">
              Close popover
            </span>
          </a>
          This is the content of the popover with a
          <bolt-link url="https://pega.com">
            call to action
          </bolt-link>
          .
        </span>
      </replace-with-grandchildren>
    </span>
  </replace-with-children>
</bolt-popover>
`;

exports[`<bolt-popover> Component content placement: right 1`] = `
<bolt-popover placement="right"
              uuid="12345"
>
  <replace-with-children class="c-bolt-popover c-bolt-popover--bottom c-bolt-popover--text-wrap c-bolt-popover--spacing-small">
    <replace-with-grandchildren id="js-bolt-tooltip-trigger12345">
      <a href="#js-bolt-tooltip-12345"
         class="c-bolt-popover__nojs-trigger"
         tabindex="-1"
      >
        <bolt-button>
          This triggers a popover
        </bolt-button>
      </a>
    </replace-with-grandchildren>
    <span slot="content">
      <replace-with-grandchildren class="c-bolt-popover__content"
                                  id="js-bolt-tooltip-12345"
      >
        <span class="c-bolt-popover__bubble">
          <a href="#js-bolt-tooltip-trigger12345"
             class="c-bolt-popover__nojs-close"
          >
            <span aria-hidden="true">
              &times;
            </span>
            <span class="u-bolt-visuallyhidden">
              Close popover
            </span>
          </a>
          This is the content of the popover with a
          <bolt-link url="https://pega.com">
            call to action
          </bolt-link>
          .
        </span>
      </replace-with-grandchildren>
    </span>
  </replace-with-children>
</bolt-popover>
`;

exports[`<bolt-popover> Component content placement: right-end 1`] = `
<bolt-popover placement="right-end"
              uuid="12345"
>
  <replace-with-children class="c-bolt-popover c-bolt-popover--bottom c-bolt-popover--text-wrap c-bolt-popover--spacing-small">
    <replace-with-grandchildren id="js-bolt-tooltip-trigger12345">
      <a href="#js-bolt-tooltip-12345"
         class="c-bolt-popover__nojs-trigger"
         tabindex="-1"
      >
        <bolt-button>
          This triggers a popover
        </bolt-button>
      </a>
    </replace-with-grandchildren>
    <span slot="content">
      <replace-with-grandchildren class="c-bolt-popover__content"
                                  id="js-bolt-tooltip-12345"
      >
        <span class="c-bolt-popover__bubble">
          <a href="#js-bolt-tooltip-trigger12345"
             class="c-bolt-popover__nojs-close"
          >
            <span aria-hidden="true">
              &times;
            </span>
            <span class="u-bolt-visuallyhidden">
              Close popover
            </span>
          </a>
          This is the content of the popover with a
          <bolt-link url="https://pega.com">
            call to action
          </bolt-link>
          .
        </span>
      </replace-with-grandchildren>
    </span>
  </replace-with-children>
</bolt-popover>
`;

exports[`<bolt-popover> Component content placement: right-start 1`] = `
<bolt-popover placement="right-start"
              uuid="12345"
>
  <replace-with-children class="c-bolt-popover c-bolt-popover--bottom c-bolt-popover--text-wrap c-bolt-popover--spacing-small">
    <replace-with-grandchildren id="js-bolt-tooltip-trigger12345">
      <a href="#js-bolt-tooltip-12345"
         class="c-bolt-popover__nojs-trigger"
         tabindex="-1"
      >
        <bolt-button>
          This triggers a popover
        </bolt-button>
      </a>
    </replace-with-grandchildren>
    <span slot="content">
      <replace-with-grandchildren class="c-bolt-popover__content"
                                  id="js-bolt-tooltip-12345"
      >
        <span class="c-bolt-popover__bubble">
          <a href="#js-bolt-tooltip-trigger12345"
             class="c-bolt-popover__nojs-close"
          >
            <span aria-hidden="true">
              &times;
            </span>
            <span class="u-bolt-visuallyhidden">
              Close popover
            </span>
          </a>
          This is the content of the popover with a
          <bolt-link url="https://pega.com">
            call to action
          </bolt-link>
          .
        </span>
      </replace-with-grandchildren>
    </span>
  </replace-with-children>
</bolt-popover>
`;

exports[`<bolt-popover> Component content placement: top 1`] = `
<bolt-popover placement="top"
              uuid="12345"
>
  <replace-with-children class="c-bolt-popover c-bolt-popover--bottom c-bolt-popover--text-wrap c-bolt-popover--spacing-small">
    <replace-with-grandchildren id="js-bolt-tooltip-trigger12345">
      <a href="#js-bolt-tooltip-12345"
         class="c-bolt-popover__nojs-trigger"
         tabindex="-1"
      >
        <bolt-button>
          This triggers a popover
        </bolt-button>
      </a>
    </replace-with-grandchildren>
    <span slot="content">
      <replace-with-grandchildren class="c-bolt-popover__content"
                                  id="js-bolt-tooltip-12345"
      >
        <span class="c-bolt-popover__bubble">
          <a href="#js-bolt-tooltip-trigger12345"
             class="c-bolt-popover__nojs-close"
          >
            <span aria-hidden="true">
              &times;
            </span>
            <span class="u-bolt-visuallyhidden">
              Close popover
            </span>
          </a>
          This is the content of the popover with a
          <bolt-link url="https://pega.com">
            call to action
          </bolt-link>
          .
        </span>
      </replace-with-grandchildren>
    </span>
  </replace-with-children>
</bolt-popover>
`;

exports[`<bolt-popover> Component content placement: top-end 1`] = `
<bolt-popover placement="top-end"
              uuid="12345"
>
  <replace-with-children class="c-bolt-popover c-bolt-popover--bottom c-bolt-popover--text-wrap c-bolt-popover--spacing-small">
    <replace-with-grandchildren id="js-bolt-tooltip-trigger12345">
      <a href="#js-bolt-tooltip-12345"
         class="c-bolt-popover__nojs-trigger"
         tabindex="-1"
      >
        <bolt-button>
          This triggers a popover
        </bolt-button>
      </a>
    </replace-with-grandchildren>
    <span slot="content">
      <replace-with-grandchildren class="c-bolt-popover__content"
                                  id="js-bolt-tooltip-12345"
      >
        <span class="c-bolt-popover__bubble">
          <a href="#js-bolt-tooltip-trigger12345"
             class="c-bolt-popover__nojs-close"
          >
            <span aria-hidden="true">
              &times;
            </span>
            <span class="u-bolt-visuallyhidden">
              Close popover
            </span>
          </a>
          This is the content of the popover with a
          <bolt-link url="https://pega.com">
            call to action
          </bolt-link>
          .
        </span>
      </replace-with-grandchildren>
    </span>
  </replace-with-children>
</bolt-popover>
`;

exports[`<bolt-popover> Component content placement: top-start 1`] = `
<bolt-popover placement="top-start"
              uuid="12345"
>
  <replace-with-children class="c-bolt-popover c-bolt-popover--bottom c-bolt-popover--text-wrap c-bolt-popover--spacing-small">
    <replace-with-grandchildren id="js-bolt-tooltip-trigger12345">
      <a href="#js-bolt-tooltip-12345"
         class="c-bolt-popover__nojs-trigger"
         tabindex="-1"
      >
        <bolt-button>
          This triggers a popover
        </bolt-button>
      </a>
    </replace-with-grandchildren>
    <span slot="content">
      <replace-with-grandchildren class="c-bolt-popover__content"
                                  id="js-bolt-tooltip-12345"
      >
        <span class="c-bolt-popover__bubble">
          <a href="#js-bolt-tooltip-trigger12345"
             class="c-bolt-popover__nojs-close"
          >
            <span aria-hidden="true">
              &times;
            </span>
            <span class="u-bolt-visuallyhidden">
              Close popover
            </span>
          </a>
          This is the content of the popover with a
          <bolt-link url="https://pega.com">
            call to action
          </bolt-link>
          .
        </span>
      </replace-with-grandchildren>
    </span>
  </replace-with-children>
</bolt-popover>
`;

exports[`<bolt-popover> Component content spacing: medium 1`] = `
<bolt-popover spacing="medium"
              uuid="12345"
>
  <replace-with-children class="c-bolt-popover c-bolt-popover--bottom c-bolt-popover--text-wrap c-bolt-popover--spacing-medium">
    <replace-with-grandchildren id="js-bolt-tooltip-trigger12345">
      <a href="#js-bolt-tooltip-12345"
         class="c-bolt-popover__nojs-trigger"
         tabindex="-1"
      >
        <bolt-button>
          This triggers a popover
        </bolt-button>
      </a>
    </replace-with-grandchildren>
    <span slot="content">
      <replace-with-grandchildren class="c-bolt-popover__content"
                                  id="js-bolt-tooltip-12345"
      >
        <span class="c-bolt-popover__bubble">
          <a href="#js-bolt-tooltip-trigger12345"
             class="c-bolt-popover__nojs-close"
          >
            <span aria-hidden="true">
              &times;
            </span>
            <span class="u-bolt-visuallyhidden">
              Close popover
            </span>
          </a>
          This is the content of the popover with a
          <bolt-link url="https://pega.com">
            call to action
          </bolt-link>
          .
        </span>
      </replace-with-grandchildren>
    </span>
  </replace-with-children>
</bolt-popover>
`;

exports[`<bolt-popover> Component content spacing: none 1`] = `
<bolt-popover spacing="none"
              uuid="12345"
>
  <replace-with-children class="c-bolt-popover c-bolt-popover--bottom c-bolt-popover--text-wrap ">
    <replace-with-grandchildren id="js-bolt-tooltip-trigger12345">
      <a href="#js-bolt-tooltip-12345"
         class="c-bolt-popover__nojs-trigger"
         tabindex="-1"
      >
        <bolt-button>
          This triggers a popover
        </bolt-button>
      </a>
    </replace-with-grandchildren>
    <span slot="content">
      <replace-with-grandchildren class="c-bolt-popover__content"
                                  id="js-bolt-tooltip-12345"
      >
        <span class="c-bolt-popover__bubble">
          <a href="#js-bolt-tooltip-trigger12345"
             class="c-bolt-popover__nojs-close"
          >
            <span aria-hidden="true">
              &times;
            </span>
            <span class="u-bolt-visuallyhidden">
              Close popover
            </span>
          </a>
          This is the content of the popover with a
          <bolt-link url="https://pega.com">
            call to action
          </bolt-link>
          .
        </span>
      </replace-with-grandchildren>
    </span>
  </replace-with-children>
</bolt-popover>
`;

exports[`<bolt-popover> Component content spacing: small 1`] = `
<bolt-popover spacing="small"
              uuid="12345"
>
  <replace-with-children class="c-bolt-popover c-bolt-popover--bottom c-bolt-popover--text-wrap c-bolt-popover--spacing-small">
    <replace-with-grandchildren id="js-bolt-tooltip-trigger12345">
      <a href="#js-bolt-tooltip-12345"
         class="c-bolt-popover__nojs-trigger"
         tabindex="-1"
      >
        <bolt-button>
          This triggers a popover
        </bolt-button>
      </a>
    </replace-with-grandchildren>
    <span slot="content">
      <replace-with-grandchildren class="c-bolt-popover__content"
                                  id="js-bolt-tooltip-12345"
      >
        <span class="c-bolt-popover__bubble">
          <a href="#js-bolt-tooltip-trigger12345"
             class="c-bolt-popover__nojs-close"
          >
            <span aria-hidden="true">
              &times;
            </span>
            <span class="u-bolt-visuallyhidden">
              Close popover
            </span>
          </a>
          This is the content of the popover with a
          <bolt-link url="https://pega.com">
            call to action
          </bolt-link>
          .
        </span>
      </replace-with-grandchildren>
    </span>
  </replace-with-children>
</bolt-popover>
`;

exports[`<bolt-popover> Component content spacing: xsmall 1`] = `
<bolt-popover spacing="xsmall"
              uuid="12345"
>
  <replace-with-children class="c-bolt-popover c-bolt-popover--bottom c-bolt-popover--text-wrap c-bolt-popover--spacing-xsmall">
    <replace-with-grandchildren id="js-bolt-tooltip-trigger12345">
      <a href="#js-bolt-tooltip-12345"
         class="c-bolt-popover__nojs-trigger"
         tabindex="-1"
      >
        <bolt-button>
          This triggers a popover
        </bolt-button>
      </a>
    </replace-with-grandchildren>
    <span slot="content">
      <replace-with-grandchildren class="c-bolt-popover__content"
                                  id="js-bolt-tooltip-12345"
      >
        <span class="c-bolt-popover__bubble">
          <a href="#js-bolt-tooltip-trigger12345"
             class="c-bolt-popover__nojs-close"
          >
            <span aria-hidden="true">
              &times;
            </span>
            <span class="u-bolt-visuallyhidden">
              Close popover
            </span>
          </a>
          This is the content of the popover with a
          <bolt-link url="https://pega.com">
            call to action
          </bolt-link>
          .
        </span>
      </replace-with-grandchildren>
    </span>
  </replace-with-children>
</bolt-popover>
`;
